<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/back_splash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:alpha="0.3"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <ImageView
                android:src="@drawable/splash_image"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_width="130dp"
                android:layout_height="160dp" />


            <LinearLayout
                android:id="@+id/registerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_name"
                    android:padding="10dp"
                    android:inputType="textCapWords"
                    android:textSize="13dp"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textSize="13dp"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="13dp"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />

                <EditText
                    android:id="@+id/passwordCheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_passwordCheck"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="13dp"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />

                <!--
                <EditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_age"
                    android:inputType="number"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="13dp"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:text="여성"
                            android:layout_weight="1"
                            android:textColor="@color/input_register"
                            android:textSize="13dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <RadioButton
                            android:text="남성"
                            android:layout_weight="1"
                            android:textColor="@color/input_register"
                            android:textSize="13dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </RadioGroup>

                </LinearLayout> -->

                <!-- Login Button -->

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dip"
                    android:background="@drawable/gradient"
                    android:text="@string/btn_register"
                    android:textStyle="bold"
                    android:textColor="@color/white" />

                <!-- Link to Login Screen -->

                <Button
                    android:id="@+id/btnLinkToLoginScreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:text="@string/btn_link_to_login"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12dp" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>



</LinearLayout>