<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/loadingPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="invisible"
            >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
        </RelativeLayout>

        <ImageView
            android:src="@drawable/back_splash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:alpha="0.3"
            />

        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" >

            <ImageView
                android:src="@drawable/splash_image"
                android:layout_gravity="center_horizontal"
                android:layout_width="130dp"
                android:layout_height="160dp"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <!-- Login Button -->

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/gradient"
                android:text="@string/btn_login"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <!-- Link to Login Screen -->


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="#FEE934">

                <ImageView
                    android:src="@drawable/kakao_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    />

                <Button
                    android:id="@+id/com_kakao_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:text="카카오톡 계정으로 로그인"
                    android:textColor="@color/white"
                    android:textSize="11dp"
                    android:textStyle="bold"
                    android:background="#00FFFFFF" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="#3B5998">

                <ImageView
                    android:src="@drawable/facebook_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    />

                <Button
                    android:id="@+id/com_facebook_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:text="페이스북 계정으로 로그인"
                    android:textColor="@color/white"
                    android:textSize="11dp"
                    android:textStyle="bold"
                    android:background="#00FFFFFF" />

            </RelativeLayout>




            <Button
                android:id="@+id/btnLinkToRegisterScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12dp" />

        </LinearLayout>


    </RelativeLayout>




</LinearLayout>